--- a/src/pages/QuizPage.module.css
+++ b/src/pages/QuizPage.module.css
@@ -13,7 +13,7 @@
 }
 
 .breadcrumb a {
-  color: #3b82f6;
+  color: #0891b2;
   text-decoration: none;
 }
 
@@ -70,8 +70,8 @@
 }
 
 .option:hover:not(:disabled) {
-  border-color: #3b82f6;
-  background-color: #f0f9ff;
+  border-color: #0891b2;
+  background-color: #ecfeff;
 }
 
 .option:disabled {
@@ -79,8 +79,8 @@
 }
 
 .selected {
-  border-color: #3b82f6;
-  background-color: #eff6ff;
+  border-color: #0891b2;
+  background-color: #cffafe;
 }
 
 .correct {
@@ -159,7 +159,7 @@
 .scoreValue {
   font-size: 64px;
   font-weight: 700;
-  color: #3b82f6;
+  color: #0891b2;
 }
 
 .scoreTotal {
@@ -206,7 +206,7 @@
 }
 
 .notFound a {
-  color: #3b82f6;
+  color: #0891b2;
   text-decoration: none;
 }
 
