--- a/src/components/ui/Badge.module.css
+++ b/src/components/ui/Badge.module.css
@@ -13,8 +13,8 @@
 }
 
 .primary {
-  background-color: #dbeafe;
-  color: #1d4ed8;
+  background-color: #cffafe;
+  color: #0e7490;
 }
 
 .success {
