--- a/src/components/ui/Button.module.css
+++ b/src/components/ui/Button.module.css
@@ -25,12 +25,12 @@
 }
 
 .primary {
-  background-color: #3b82f6;
+  background-color: #0891b2;
   color: white;
 }
 
 .primary:hover:not(.disabled) {
-  background-color: #2563eb;
+  background-color: #0e7490;
 }
 
 .secondary {
