--- a/src/features/actionable/components/ClickableHeatmap.module.css
+++ b/src/features/actionable/components/ClickableHeatmap.module.css
@@ -18,6 +18,6 @@
 }
 
 .clickableWrapper :global([data-testid='heatmap-day']):focus {
-  outline: 2px solid #3b82f6;
+  outline: 2px solid #0891b2;
   outline-offset: 2px;
 }
