--- a/src/features/insights/components/NextLessonsCard.module.css
+++ b/src/features/insights/components/NextLessonsCard.module.css
@@ -38,7 +38,7 @@
   justify-content: center;
   width: 28px;
   height: 28px;
-  background-color: #3b82f6;
+  background-color: #0891b2;
   color: white;
   border-radius: 50%;
   font-size: 14px;
@@ -91,7 +91,7 @@
 
 .viewAllLink {
   font-size: 14px;
-  color: #3b82f6;
+  color: #0891b2;
   text-decoration: none;
   font-weight: 500;
 }
