--- a/src/features/metrics/components/LearningMetricsCard.module.css
+++ b/src/features/metrics/components/LearningMetricsCard.module.css
@@ -68,7 +68,7 @@
 
 .progressFill {
   height: 100%;
-  background-color: #3b82f6;
+  background-color: #0891b2;
   border-radius: 3px;
   transition: width 0.3s ease;
 }
@@ -132,7 +132,7 @@
 }
 
 .explainButton:focus {
-  outline: 2px solid #3b82f6;
+  outline: 2px solid #0891b2;
   outline-offset: 1px;
 }
 
