--- a/src/pages/ExercisePage.module.css
+++ b/src/pages/ExercisePage.module.css
@@ -14,7 +14,7 @@
 }
 
 .breadcrumb a {
-  color: #3b82f6;
+  color: #0891b2;
   text-decoration: none;
 }
 
@@ -122,8 +122,8 @@
 
 .textarea:focus {
   outline: none;
-  border-color: #3b82f6;
-  box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+  border-color: #0891b2;
+  box-shadow: 0 0 0 3px rgba(8, 145, 178, 0.1);
 }
 
 .checkboxLabel {
@@ -180,7 +180,7 @@
 }
 
 .notFound a {
-  color: #3b82f6;
+  color: #0891b2;
   text-decoration: none;
 }
 
